--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.16.0",
     "react-switch": "^7.0.0",
+    "react-use": "^17.4.0",
     "redux-persist": "^6.0.0",
     "sonner": "^1.0.3"
   },
